--- a/index.html
+++ b/index.html
@@ -475,6 +475,7 @@
         </ul>
       </div>
       <div class="form-container">
+        <p class="title-subscribe">Subscribe</p>
 
       </div>
       </div>
