--- a/index.html
+++ b/index.html
@@ -476,6 +476,12 @@
       </div>
       <div class="form-container">
         <p class="title-subscribe">Subscribe</p>
+        <form class="footer-form">
+
+
+
+
+        </form>
 
       </div>
       </div>
