--- a/index.html
+++ b/index.html
@@ -477,6 +477,14 @@
       <div class="form-container">
         <p class="title-subscribe">Subscribe</p>
         <form class="footer-form">
+          <label class="footer-label">
+
+
+
+
+
+
+          </label>
 
 
 
