--- a/index.html
+++ b/index.html
@@ -478,7 +478,12 @@
         <p class="title-subscribe">Subscribe</p>
         <form class="footer-form">
           <label class="footer-label">
-
+            <input
+             class="footer-subscribe-input"
+            type="email"
+            name="email-field"
+            placeholder="E-mail"
+            />
 
 
 
