--- a/index.html
+++ b/index.html
@@ -484,6 +484,7 @@
             name="email-field"
             placeholder="E-mail"
             />
+            <button type="submit">Subscribe</button>
 
 
 
