--- a/index.html
+++ b/index.html
@@ -484,7 +484,18 @@
             name="email-field"
             placeholder="E-mail"
             />
-            <button type="submit">Subscribe</button>
+            <button type="submit"  name="email-subscribe-button"
+            class="footer-subscribe-button">
+            Subscribe
+            <svg
+                class="footer-subscribe-icon"
+                aria-label="icon-send"
+                width="24"
+                height="24"
+              >
+                <use href="./images/icons.svg#icon-Frame-3"></use>
+              </svg>
+              </button>
 
 
 
