--- a/index.html
+++ b/index.html
@@ -327,12 +327,17 @@
           <ul class="portfolio-ul list">
             <li class="work-item">
               <div class="gallery-overley-wrapper">
-              <img class="gallery-image" src="./images/project1.jpg" alt="Aproject" width="360" />
-              <p class="gallery-overley-text">
-                14 Stylish and User-Friendly App Design Concepts · Task
-                Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                App · Cloud Storage App
-              </p>
+                <img
+                  class="gallery-image"
+                  src="./images/project1.jpg"
+                  alt="Aproject"
+                  width="360"
+                />
+                <p class="gallery-overley-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="work-container">
                 <h3 class="portfolio-title">Banking App Interface Concept</h3>
@@ -341,12 +346,12 @@
             </li>
             <li class="work-item">
               <div class="gallery-overley-wrapper">
-              <img src="./images/project2.jpg" alt="Aproject" width="360" />
-              <p class="gallery-overley-text">
-                14 Stylish and User-Friendly App Design Concepts · Task
-                Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                App · Cloud Storage App
-              </p>
+                <img src="./images/project2.jpg" alt="Aproject" width="360" />
+                <p class="gallery-overley-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="work-container">
                 <h3 class="portfolio-title">Cashless Payment</h3>
@@ -355,12 +360,12 @@
             </li>
             <li class="work-item">
               <div class="gallery-overley-wrapper">
-              <img src="./images/project3.jpg" alt="Aproject" width="360" />
-              <p class="gallery-overley-text">
-                14 Stylish and User-Friendly App Design Concepts · Task
-                Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                App · Cloud Storage App
-              </p>
+                <img src="./images/project3.jpg" alt="Aproject" width="360" />
+                <p class="gallery-overley-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="work-container">
                 <h3 class="portfolio-title">Meditation App</h3>
@@ -369,12 +374,12 @@
             </li>
             <li class="work-item">
               <div class="gallery-overley-wrapper">
-              <img src="./images/project4.jpg" alt="Aproject" width="360" />
-              <p class="gallery-overley-text">
-                14 Stylish and User-Friendly App Design Concepts · Task
-                Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                App · Cloud Storage App
-              </p>
+                <img src="./images/project4.jpg" alt="Aproject" width="360" />
+                <p class="gallery-overley-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="work-container">
                 <h3 class="portfolio-title">Taxi Service</h3>
@@ -383,12 +388,12 @@
             </li>
             <li class="work-item">
               <div class="gallery-overley-wrapper">
-              <img src="./images/project5.jpg" alt="Aproject" width="360" />
-              <p class="gallery-overley-text">
-                14 Stylish and User-Friendly App Design Concepts · Task
-                Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                App · Cloud Storage App
-              </p>
+                <img src="./images/project5.jpg" alt="Aproject" width="360" />
+                <p class="gallery-overley-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="work-container">
                 <h3 class="portfolio-title">Screen Illustrations</h3>
@@ -397,12 +402,12 @@
             </li>
             <li class="work-item">
               <div class="gallery-overley-wrapper">
-              <img src="./images/project6.jpg" alt="Aproject" width="360" />
-              <p class="gallery-overley-text">
-                14 Stylish and User-Friendly App Design Concepts · Task
-                Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                App · Cloud Storage App
-              </p>
+                <img src="./images/project6.jpg" alt="Aproject" width="360" />
+                <p class="gallery-overley-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="work-container">
                 <h3 class="portfolio-title">Online Courses</h3>
@@ -417,98 +422,75 @@
     <footer class="footer">
       <div class="footer-container">
         <div class="footer-wrapper">
-        <a class="logo-footer link" href="./index.html"
-          >Web<span class="logo-footer-white">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-      </div>
-      <div class="footer-icon-wrapper">
-        <p class="footer-icon-text">Social media</p>
-        <ul class="footer-icon-list">
-          <li class="footer-icon-item">
-            <a href="" class="footer-icon-link">
-              <svg
-                class="footer-icon"
-                width="24"
-                height="24"
+          <a class="logo-footer link" href="./index.html"
+            >Web<span class="logo-footer-white">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-icon-wrapper">
+          <p class="footer-icon-text">Social media</p>
+          <ul class="footer-icon-list">
+            <li class="footer-icon-item">
+              <a href="" class="footer-icon-link">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-icon-item">
+              <a href="" class="footer-icon-link">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-icon-item">
+              <a href="" class="footer-icon-link">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-icon-item">
+              <a href="" class="footer-icon-link">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="form-container">
+          <p class="title-subscribe">Subscribe</p>
+          <form class="footer-form">
+            <label class="footer-label">
+              <input
+                class="footer-subscribe-input"
+                type="email"
+                name="email-field"
+                placeholder="E-mail"
+              />
+            </label>
+              <button
+                type="submit"
+                name="email-subscribe-button"
+                class="footer-subscribe-button"
               >
-                <use href="./images/icons.svg#icon-instagram-2"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="footer-icon-item">
-            <a href="" class="footer-icon-link">
-              <svg
-                class="footer-icon"
-                width="24"
-                height="24"
-              >
-                <use href="./images/icons.svg#icon-twitter-1"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="footer-icon-item">
-            <a href="" class="footer-icon-link">
-              <svg
-                class="footer-icon"
-                width="24"
-                height="24"
-              >
-                <use href="./images/icons.svg#icon-facebook-1"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="footer-icon-item">
-            <a href="" class="footer-icon-link">
-              <svg
-                class="footer-icon"
-                width="24"
-                height="24"
-              >
-                <use href="./images/icons.svg#icon-linkedin-1"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
-      </div>
-      <div class="form-container">
-        <p class="title-subscribe">Subscribe</p>
-        <form class="footer-form">
-          <label class="footer-label">
-            <input
-             class="footer-subscribe-input"
-            type="email"
-            name="email-field"
-            placeholder="E-mail"
-            />
-            <button type="submit"  name="email-subscribe-button"
-            class="footer-subscribe-button">
-            Subscribe
-            <svg
-                class="footer-subscribe-icon"
-                aria-label="icon-send"
-                width="24"
-                height="24"
-              >
-                <use href="./images/icons.svg#icon-Frame-3"></use>
-              </svg>
+                Subscribe
+                <svg
+                  class="footer-subscribe-icon"
+                  aria-label="icon-send"
+                  width="24"
+                  height="24"
+                >
+                  <use href="./images/icons.svg#icon-Frame-3"></use>
+                </svg>
               </button>
-
-
-
-
-
-          </label>
-
-
-
-
-        </form>
-
-      </div>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
