--- a/index.html
+++ b/index.html
@@ -492,7 +492,26 @@
         </div>
       </div>
     </footer>
-    <div class="modal-container">
+    <div  class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button class="modal__button-close" type="button" data-modal-close>
+          <svg
+            class="modal__icon-close"
+            width="8"
+            height="8"
+          >
+            <use href="./images/icons.svg#icon-Modal-1"></use>
+          </svg>
+
+
+
+        </button>
+
+
+
+
+
+      </div>
 
 
     </div>
