--- a/index.html
+++ b/index.html
@@ -494,13 +494,13 @@
     </footer>
     <div  class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <button class="modal__button-close" type="button" data-modal-close>
+        <button class="modal-button-close" type="button" data-modal-close>
           <svg
-            class="modal__icon-close"
+            class="modal-icon-close"
             width="8"
             height="8"
           >
-            <use href="./images/icons.svg#icon-Modal-1"></use>
+            <use href="./images/icons.svg#icon-close"></use>
           </svg>
 
 
