--- a/index.html
+++ b/index.html
@@ -502,6 +502,9 @@
           >
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
+          <p class="modal-title">
+            Leave your contacts and we will call you back
+          </p>
 
 
 
