--- a/index.html
+++ b/index.html
@@ -525,6 +525,25 @@
               </svg>
             </div>
           </div>
+          <div class="modal-wrapper">
+            <label class="modal-label" for="user-name">Phone</label>
+            <div class="modal-icon-wrapper">
+              <input
+                class="modal-input"
+                type="text"
+                name="user-name"
+                id="user-name"
+              />
+              <svg
+                class="modal-icon"
+                width="18"
+                height="24"
+              >
+                <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
+              </svg>
+            </div>
+          </div>
+
         </form>
       </div>
     </div>
