--- a/index.html
+++ b/index.html
@@ -530,9 +530,9 @@
             <div class="modal-icon-wrapper">
               <input
                 class="modal-input"
-                type="text"
-                name="user-name"
-                id="user-name"
+                type="tel"
+                name="phone-number"
+                id="phone-number"
               />
               <svg
                 class="modal-icon"
@@ -548,9 +548,9 @@
             <div class="modal-icon-wrapper">
               <input
                 class="modal-input"
-                type="text"
-                name="user-name"
-                id="user-name"
+                type="email"
+                name="user-email"
+                id="user-email"
               />
               <svg
                 class="modal-icon"
