--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
             </div>
           </div>
           <div class="modal-wrapper">
-            <label class="modal-label" for="user-name">Phone</label>
+            <label class="modal-label" for="phone-number">Phone</label>
             <div class="modal-icon-wrapper">
               <input
                 class="modal-input"
@@ -544,7 +544,7 @@
             </div>
           </div>
           <div class="modal-wrapper">
-            <label class="modal-label" for="user-name">Email</label>
+            <label class="modal-label" for="user-email">Email</label>
             <div class="modal-icon-wrapper">
               <input
                 class="modal-input"
