--- a/index.html
+++ b/index.html
@@ -561,6 +561,17 @@
               </svg>
             </div>
           </div>
+          <div class="modal-text-field-wrapper">
+            <label class="modal-label" for="user-comment">Comment</label>
+            <textarea class="modal-text-field" name="user-comment" id="user-comment" placeholder="Text input"></textarea>
+
+
+
+
+
+
+
+          </div>
 
         </form>
       </div>
