--- a/index.html
+++ b/index.html
@@ -474,38 +474,28 @@
                 placeholder="E-mail"
               />
             </label>
-              <button
-                type="submit"
-                name="email-subscribe-button"
-                class="footer-subscribe-button"
-              >
-                Subscribe
-                <svg
-                  class="footer-subscribe-icon"
-                  width="24"
-                  height="24"
-                >
-                  <use href="./images/icons.svg#icon-Frame-3"></use>
-                </svg>
-              </button>
+            <button
+              type="submit"
+              name="email-subscribe-button"
+              class="footer-subscribe-button"
+            >
+              Subscribe
+              <svg class="footer-subscribe-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-Frame-3"></use>
+              </svg>
+            </button>
           </form>
         </div>
       </div>
     </footer>
-    <div  class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal-button-close" type="button" data-modal-close>
-          <svg
-            class="modal-icon-close"
-            width="8"
-            height="8"
-          >
+          <svg class="modal-icon-close" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
-        <p class="modal-title">
-          Leave your contacts and we will call you back
-        </p>
+        <p class="modal-title">Leave your contacts and we will call you back</p>
         <form class="modal-form">
           <div class="modal-wrapper">
             <label class="modal-label" for="user-name">Name</label>
@@ -516,11 +506,7 @@
                 name="user-name"
                 id="user-name"
               />
-              <svg
-                class="modal-icon"
-                width="18"
-                height="24"
-              >
+              <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-Frame-1"></use>
               </svg>
             </div>
@@ -534,11 +520,7 @@
                 name="phone-number"
                 id="phone-number"
               />
-              <svg
-                class="modal-icon"
-                width="18"
-                height="24"
-              >
+              <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
               </svg>
             </div>
@@ -552,27 +534,44 @@
                 name="user-email"
                 id="user-email"
               />
-              <svg
-                class="modal-icon"
-                width="18"
-                height="24"
-              >
+              <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
               </svg>
             </div>
           </div>
           <div class="modal-text-field-wrapper">
             <label class="modal-label" for="user-comment">Comment</label>
-            <textarea class="modal-text-field" name="user-comment" id="user-comment" placeholder="Text input"></textarea>
-
-
-
-
-
-
-
+            <textarea
+              class="modal-text-field"
+              name="user-comment"
+              id="user-comment"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+          <div class="modal-check-wrapper">
+            <input
+              class="modal-check-input visually-hidden"
+              type="checkbox"
+              name="user-privacy"
+              id="user-privacy"
+              value="true"
+            />
+            <label class="modal-check-text" for="user-privacy">
+              <span class="modal-check-box">
+                <svg
+                  class="modal-icon-check"
+                  width="10"
+                  height="8"
+                >
+                  <use href="./images/icons.svg#icon-Checkbox"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a class="modal-link-text" href="">Privacy Policy</a></label
+            >
           </div>
 
+          <button class="modal-button-submit" type="submit">Send</button>
         </form>
       </div>
     </div>
