--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <!-- links -->
           <ul class="site-nav list">
             <li class="site-item">
-              <a href="./index.html" class="studio-link link">Studio</a>
+              <a href="./index.html" class="studio-link link current">Studio</a>
             </li>
             <li class="site-item">
               <a href="./portfolio.html" class="studio-link link">Portfolio</a>
@@ -420,7 +420,7 @@
     </main>
     <!-- Pages -->
     <footer class="footer">
-      <div class="footer-container">
+      <div class="footer-container container">
         <div class="footer-wrapper">
           <a class="logo-footer link" href="./index.html"
             >Web<span class="logo-footer-white">Studio</span></a
@@ -492,7 +492,7 @@
       <div class="modal">
         <button class="modal-button-close" type="button" data-modal-close>
           <svg class="modal-icon-close" width="8" height="8">
-            <use href="./images/icons.svg#icon-close"></use>
+            <use href="./images/icons.svg#icon-Vector"></use>
           </svg>
         </button>
         <p class="modal-title">Leave your contacts and we will call you back</p>
@@ -520,7 +520,7 @@
                 name="phone-number"
                 id="phone-number"
               />
-              <svg class="modal-icon" width="18" height="24">
+              <svg class="modal-icon active" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
               </svg>
             </div>
@@ -534,7 +534,7 @@
                 name="user-email"
                 id="user-email"
               />
-              <svg class="modal-icon" width="18" height="24">
+              <svg class="modal-icon active" width="18" height="24">
                 <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
               </svg>
             </div>
@@ -563,7 +563,7 @@
                   width="10"
                   height="8"
                 >
-                  <use href="./images/icons.svg#icon-Checkbox"></use>
+                  <use href="./images/icons.svg#icon-Vector-1"></use>
                 </svg>
               </span>
               I accept the terms and conditions of the
